# xsys4dbg

./: .gitmodules  README.md  icons.qrc  meson.build
src/: codeviewer.cpp  codeviewer.hpp  dapclient.cpp  dapclient.hpp  debugger.cpp  debugger.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  meson.build  outputlog.cpp  outputlog.hpp  sceneviewer.cpp  sceneviewer.hpp  settingsdialog.cpp  settingsdialog.hpp  syntaxhighlighter.cpp  syntaxhighlighter.hpp  variablesmodel.cpp  variablesmodel.hpp  version.hpp  xsystem4.cpp  xsystem4.hpp
